@@ -62,6 +62,10 @@
 			<li>roundToDecimalPlace0NegativeUp <span class="roundToDecimalPlace0NegativeUp">-123.9</span></li>
 			<li>roundToDecimalPlace0NegativeDown <span class="roundToDecimalPlace0NegativeDown">-123.4</span></li>
 			<li>roundToDecimalPlace_-1 <span class="roundToDecimalPlace_-1">123.456</span></li>
+			<li>noRounding <span class="noRounding">123.456</span></li>
+			<li>keepTrailingZeros <span class="keepTrailingZeros">124.0000</span></li>
+			<li>noTrailingDecimal <span class="noTrailingDecimal">123.</span></li>
+			<li>warnOnDecimalsEntered <span class="warnOnDecimalsEntered">123.456</span> with warning: <span class="warnOnDecimalsEnteredNotification">OK</span></li>
 			<li>roundOneUp <span class="roundOneUp">123.999</span></li>
 			<li>roundOneDown <span class="roundOneDown">-123.999</span></li>
 			<li>negativeBrackets <span class="negativeBrackets">(123)</span></li>
